--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
 asgiref==3.7.2
+certifi==2024.2.2
+charset-normalizer==3.3.2
 dj-database-url==2.1.0
 dj-email-url==1.0.6
 Django==5.0.3
 django-cache-url==3.4.5
 djangorestframework==3.14.0
 environs==11.0.0
+idna==3.6
 marshmallow==3.21.1
 packaging==23.2
 python-dotenv==1.0.1
 pytz==2024.1
+requests==2.31.0
 sqlparse==0.4.4
 typing_extensions==4.10.0
+urllib3==2.2.1
